welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:1: error: value ==- is not a member of Int
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {var a = -1;for (i <- 0 to nums.length-1) {if (nums(i)==lookingFor && a==-1) a=i};return a} 
                                                                                                                                ^